Right sidebar collapse bug fix

--- a/src/index.sass
+++ b/src/index.sass
@@ -2300,6 +2300,10 @@ mark
         & svg
           display: none
 
+  .left-sidebar
+    &__livebar-view-toggle
+      display: flex
+
   .right-sidebar
     position: fixed
     width: 100%
@@ -2692,17 +2696,7 @@ mark
 
 @media (min-width: 768px) and (max-width: 1260px)
   .right-sidebar
-    position: fixed
-    top: 0
-    width: 100%
-    height: 100%
-    background: rgba(0, 0, 0, 0.5)
-    z-index: 2
+    display: none
 
     &__body
       margin-left: auto
-
-@media (max-width: 1260px)
-  .left-sidebar
-    &__livebar-view-toggle
-      display: flex
